# leuvenshtein-db-demo

./: Cargo.toml  belfort.patch  leuvenshtein.patch
scripts/: prepare_env.sh
src/: app.rs  data.rs  enc_struct.rs  main.rs  mod.rs  util.rs
src/algorithm/: main_db.rs  myers.rs
