[package]
name = "leuvenshtein-db-demo"
version = "0.1.0"
edition = "2021"
default-run = "demo"

[dependencies]
tfhe = { path = "../tfhe-rs/tfhe", features = ["shortint", "integer"] }
rand = "0.9.0"
rayon = "1.10.0"
pad = "0.1.6"
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"

[features]
fpga = ["tfhe/fpga"]

[[bin]]
name = "demo"
path = "src/main.rs"
